# birthday-rank

./: .gitignore  Cargo.toml  README.md  birthday_ranks_2026.csv  install.sh
src/: main.rs
templates/: index.html
