[package]
name = "birthday-rank"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
askama = "0.12" # For templating the HTML
